--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "dom": "^0.0.3",
+    "firebase": "^10.12.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
